# macro-release-trading-engine

./: README.md  pyproject.toml  requirements.txt
data/manual_forecasts/: example_g10_calendar.csv
src/macro_engine/: __init__.py  calendar_impact.py  calendar_sources.py  catalog.py  cli.py  daily_playbook.py  diagnostics.py  models.py  release_assessment.py  release_cluster.py  reports.py  scoring.py  source_adapters.py  sources.py  storage.py  symbol_impact.py  symbol_profiles.py
tests/: test_calendar_impact.py  test_calendar_ingestion.py  test_calendar_sources.py  test_daily_playbook.py  test_release_assessment.py  test_release_cluster.py  test_scoring.py  test_symbol_impact.py
