[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-release-trading-engine"
version = "0.1.0"
description = "G10 macro release workflow and trading intelligence engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "python-dateutil>=2.9",
    "pydantic>=2.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
